--- a/index.html
+++ b/index.html
@@ -35,18 +35,83 @@
             margin-bottom: 0rem !important;
 
         }
-        .navbar_gg{
-            padding-left: 74%!important;
+
+        .navbar_gg {
+            padding-left: 74% !important;
+        }
+
+
+
+
+        /* Coolors Exported Palette - coolors.co/5c415d-393e41-7e7f79-fffc31-e94f37 */
+
+        /* HSL */
+
+        .color_0 {
+            /*
+    $color1: hsla(298%, 18%, 31%, 1);
+    $color1: rgba(92, 65, 93, 1);
+    */      
+            background-color: rgb(255, 255, 255);
+            background-color: rgb(255, 255, 255, 1);
+
+        }
+        .color_1 {
+            /*
+    $color1: hsla(298%, 18%, 31%, 1);
+    $color1: rgba(92, 65, 93, 1);
+    */      
+            background-color: hsla(298, 18, 31, 1);
+            background-color: rgb(92, 65, 93, 1);
+
+        }
+
+        .color_2 {
+            /*
+    $color2: hsla(203%, 7%, 24%, 1)
+    $color2: rgba(57, 62, 65, 1);
+    */
+            background-color: hsla(203, 7, 24, 1);
+            background-color: rgb(57, 62, 65, 1);
+
+        }
+
+        .color_3 {
+            /*
+    $color3: hsla(70%, 2%, 49%, 1);
+    $color3: rgba(126, 127, 121, 1);
+    */
+            background-color: hsla(70, 2, 49, 1);
+            background-color: rgba(126, 127, 121, 1)
+        }
+
+
+        .color_4 {
+            /*
+    $color4: hsla(59%, 100%, 60%, 1);
+    $color4: rgba(255, 252, 49, 1);
+    */
+            background-color: hsla(59, 100, 60, 1);
+            background-color: rgba(255, 252, 49, 1)
+        }
+
+        .color_5 {
+            /*
+    $color5: hsla(8%, 80%, 56%, 1);
+    $color5: rgba(233, 79, 55, 1);
+    */
+            background-color: hsla(8, 80, 56, 1);
+            background-color: rgba(233, 79, 55, 1);
         }
     </style>
 </head>
 
-<body style="background-color: yellow;">
+<body class="color_1">
     <!--
         <div class="container">
     -->
     <nav class="navbar bg-dark navbar-dark justify-content-md-center">
-        <h1 class="col col-md-6">Luca Sain</h1>
+        <a class="col col-md-6">Luca Sain</a>
 
         <!-- Cosas -->
 
@@ -73,7 +138,7 @@
         </div>
     </nav>
 
-    <div class="bannerLogo bg-success">
+    <div class="bannerLogo color_5">
         <section class="row justify-content-md-center seccionPortada">
             <div class="col">
                 <img class="mx-auto d-block rounded-circle"
@@ -94,7 +159,7 @@
 
     <div>
         <div class="container">
-            <section class="col col-md-12 bg-warning text-dark">
+            <section class="col col-md-12 color_0 text-dark">
 
                 <!--#############################################################################################-->
 
@@ -177,7 +242,7 @@
 
 
 
-            <section class="col col-md-12 mt-5 pb-5 bg-warning text-dark">
+            <section class="col col-md-12 mt-5 pb-5 color_0 text-dark">
                 <h2 class="pt-5 text-center">Educacion</h2>
 
 
@@ -243,7 +308,7 @@
 
 
 
-            <section class="col-md-12 mt-5 pb-5 bg-warning text-dark">
+            <section class="col-md-12 mt-5 pb-5 color_0 text-dark">
                 <h2 class="pt-5 text-center">Experiencia Laboral</h2>
 
 
