--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="school-card.css">
     <link rel="stylesheet" href="work-cards.css">
+    <link rel="stylesheet" href="colores.css">
 
     <title>CV Luca Sain</title>
     <style>
@@ -59,92 +60,12 @@
 
 
 
-        /* Coolors Exported Palette - coolors.co/5c415d-393e41-7e7f79-fffc31-e94f37 */
-
-        /* HSL */
-
-        .color_0 {
-            /*
-    $color1: hsla(298%, 18%, 31%, 1);
-    $color1: rgba(92, 65, 93, 1);
-    */
-            background-color: rgb(255, 255, 255);
-            background-color: rgb(255, 255, 255, 1);
-
-        }
-
-        .color_0_font {
-            color: rgb(255, 255, 255, 1);
-        }
-
-        .color_1 {
-            /*
-    $color1: hsla(298%, 18%, 31%, 1);
-    $color1: rgba(92, 65, 93, 1);
-    */
-            background-color: hsla(298, 18, 31, 1);
-            background-color: rgb(92, 65, 93, 1);
-
-        }
-
-        .color_1_font {
-            color: rgb(92, 65, 93, 1);
-        }
-
-        .color_2 {
-            /*
-    $color2: hsla(203%, 7%, 24%, 1)
-    $color2: rgba(57, 62, 65, 1);
-    */
-            background-color: hsla(203, 7, 24, 1);
-            background-color: rgb(57, 62, 65, 1);
-
-        }
-
-        .color_2_font {
-            color: rgb(57, 62, 65, 1);
-        }
-
-        .color_3 {
-            /*
-    $color3: hsla(70%, 2%, 49%, 1);
-    $color3: rgba(126, 127, 121, 1);
-    */
-            background-color: hsla(70, 2, 49, 1);
-            background-color: rgba(126, 127, 121, 1)
-        }
-
-        .color_2_font {
-            color: rgb(126, 127, 121, 1);
-        }
-
-
-        .color_4 {
-            /*
-    $color4: hsla(59%, 100%, 60%, 1);
-    $color4: rgba(255, 252, 49, 1);
-    */
-            background-color: hsla(59, 100, 60, 1);
-            background-color: rgba(255, 252, 49, 1)
-        }
-
-        .color_4_font {
-            color: rgb(255, 252, 49, 1);
-        }
-
-
-
-        .color_5 {
-            /*
-    $color5: hsla(8%, 80%, 56%, 1);
-    $color5: rgba(233, 79, 55, 1);
-    */
-            background-color: hsla(8, 80, 56, 1);
-            background-color: rgba(233, 79, 55, 1);
-        }
-
-        .color_5_font {
-            color: rgb(233, 79, 55, 1);
+        .rotado {
+            -webkit-transform: rotate(270deg);
+            -moz-transform: rotate(270deg);
+            -ms-transform: rotate(270deg);
+            -o-transform: rotate(270deg);
+            transform: rotate(270deg);
         }
     </style>
 </head>
@@ -214,43 +135,50 @@
                         <div class="row d-flex">
 
 
-                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                <ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                                </ol>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img class="d-block w-100" src="fotos/IMG_20191022_213157767.jpg"
-                                            alt="First slide">
+
+                            <div class="col-md-4 p-3 ">
+
+
+                                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                    <ol class="carousel-indicators">
+                                        <!--
+                                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>  
+                                        -->
+                                    </ol>
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img class="d-block w-100 rounded rotado" src="fotos/IMG_20191022_213157767.jpg"
+                                                alt="First slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100 rounded rotado" src="fotos/IMG_20191022_213226166.jpg"
+                                                alt="Second slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100 rounded rotado" src="fotos/IMG_20191022_213235570.jpg"
+                                                alt="Third slide">
+                                        </div>
                                     </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100" src="fotos/IMG_20191022_213226166.jpg"
-                                            alt="Second slide">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100" src="fotos/IMG_20191022_213235570.jpg"
-                                            alt="Third slide">
-                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                                        data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                                        data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
-                                    data-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
-                                    data-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
-                            </div>
-                            <div class="col-md-4 p-3">
-
-
+                                <!--
                                 <a href="">
                                     <img class="rounded" src="fotos/IMG_20191022_213157767.jpg" alt="" style="max-width: 100%;" />
                                 </a>
+
+                                -->
+
                             </div>
 
                             <div class="col-md-8 wow animated bounceInLeft Nunito box3" data-wow-delay="1.4s">
@@ -329,19 +257,19 @@
                     <div class="col-sm-10 col-md-5 mt-5 pb-5 ">
                         <div class="row boxlayout">
 
-                            <div class=" test2 col-sm-2 col-md-2 bg-success">
+                            <div class=" test2 col-sm-2 col-md-2 color_5">
                                 <h1 class="test card-text">2013-2018</h1>
                             </div>
 
-                            <div class="col-sm-10 col-md-10 bg-dark">
-                                <div class=" bg-danger">
-                                    <h3>
-                                        School Name
-                                    </h3>
+                            <div class="col-sm-10 col-md-10 color_4">
+                                <div class="color_2_font mt-3 pb-3">
+                                    <h4>
+                                        E.T. Nº28 "Republica Francesa"
+                                    </h4>
                                 </div>
-                                <div class="bg-secondary">
+                                <div class="color_3_font">
                                     <p>
-                                        Some data of this school
+                                        Es una escuela secundaria pública de educación técnica. Está ubicada en la calle Cuba 2410 en la Ciudad Autónoma de Buenos Aires
                                     </p>
                                 </div>
                             </div>
