--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         h1 {
             font-family: 'Ubuntu', sans-serif;
         }
-
+        h2 {
+            font-family: 'Ubuntu', sans-serif;
+        }
+        h3 {
+            font-family: 'Ubuntu', sans-serif;
+        }
         p {
             font-family: 'Open Sans', sans-serif;
         }
@@ -129,7 +134,7 @@
                 <div class=" pb-4 xd">
                     <br>
                     <div class="" id="">
-                        <h3 class="display-4 text-center mt-5 mb-5" id="">
+                        <h3 class="text-center mt-5 mb-5" id="">
                             Acerca de mi
                         </h3>
                         <div class="row d-flex">
