--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
 
         .navbar_gg {
-            padding-left: 74% !important;
+            padding-left: 72% !important;
         }
 
 
@@ -90,18 +90,18 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav navbar_gg">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cosa 1</a>
+                    <a class="nav-link" href="#acerca">Acerca de mi</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cosa 2</a>
+                    <a class="nav-link" href="#">Educacion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cosa 3</a>
+                    <a class="nav-link" href="#">Experiencia Laboral</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cosa 4</a>
+                    <a class="nav-link" href="#">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -133,7 +133,7 @@
 
                 <div class=" pb-4 xd">
                     <br>
-                    <div class="" id="">
+                    <div class="" id="acerca">
                         <h3 class="text-center mt-5 mb-5" id="">
                             Acerca de mi
                         </h3>
