--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             -o-transform: rotate(270deg);
             transform: rotate(270deg);
         }
+        .texto-p{
+            font-size: 90%;
+        }
     </style>
 </head>
 
@@ -110,7 +113,7 @@
     <div class="bannerLogo color_5">
         <section class="row justify-content-md-center seccionPortada">
             <div class="col">
-                <img class="col-1 mx-auto d-block rounded-circle" src="foto_perfil.jpg" alt="lukaneco">
+                <img class="w-25 p-3 col-md-1 mx-auto d-block rounded-circle" src="foto_perfil.jpg" alt="lukaneco">
                 <h1 class="text-center">
                     Curriculum Vitae
                 </h1>
@@ -260,20 +263,20 @@
                 <div class="row boxlayout justify-content-around">
 
                     <div class="col-sm-10 col-md-5 mt-5 pb-5 ">
-                        <div class="row boxlayout">
+                        <div class="card-text-master row boxlayout">
 
-                            <div class=" test2 col-sm-2 col-md-2 color_5">
+                            <div class="gg1 test2 col-sm-2 col-md-2 color_5">
                                 <h1 class="test card-text">2013-2018</h1>
                             </div>
 
-                            <div class="col-sm-10 col-md-10 color_4">
+                            <div class="gg1 col-sm-10 col-md-10 color_4">
                                 <div class="color_2_font mt-3 pb-3">
                                     <h4>
                                         E.T. Nº28 "Republica Francesa"
                                     </h4>
                                 </div>
                                 <div class="color_3_font">
-                                    <p>
+                                    <p class="texto-p">
                                         Es una escuela secundaria pública de educación técnica. Está ubicada en la calle Cuba 2410 en la Ciudad Autónoma de Buenos Aires
                                     </p>
                                 </div>
