--- a/index.html
+++ b/index.html
@@ -500,9 +500,8 @@
         </div>
     </div>
     </div>
-    <footer>
+    <footer class="mr-0 pr-0">
         <p>Lukaneco, Todos Los Derechos Reservados 2019</p>
-
     </footer>
 
 
