--- a/github.ajax.html
+++ b/github.ajax.html
@@ -75,7 +75,8 @@
 
         }
 
-
+        //CACHE
+        // https://www.sitepoint.com/cache-fetched-ajax-requests/
 
         var FlagColumnLookupNames = false
 
