--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="col">
                 <img class="col-4 col-lg-2 mx-auto d-block rounded-circle" src="foto_perfil.jpg" alt="lukaneco">
                 <h1 class="text-center">
-                    Luca Sain
+                    Curriculum Vitae
                 </h1>
                 <br>
                 <br>
