--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="col">
                 <img class="col-4 col-lg-2 mx-auto d-block rounded-circle" src="foto_perfil.jpg" alt="lukaneco">
                 <h1 class="text-center">
-                    Curriculum Vitae
+                    Currículum vítae
                 </h1>
                 <br>
                 <br>
@@ -203,7 +203,7 @@
                                 <div class="row justify-content-md-center">
                                     <p class="col-12 text-center">
                                         I'm an student of informatics and an Intern in the ausbildung.
-                                        I Like to Develop solutions to common problems,
+                                        I Like to Develop solutions to common problems
                                     </p>
                                 </div>
                                 <!--################################-->
@@ -247,7 +247,7 @@
 
                                     </div>
                                     <p class="lead row justify-content-around text-center">
-                                        <a class="btn btn-primary btn-lg" href="https://www.pornhub.com"
+                                        <a class="btn btn-primary btn-lg" href="http://example.com/"
                                             role="button">Descargar CV</a>
                                         <a class="btn btn-primary btn-lg" href="#" role="button">Contacto</a>
                                     </p>
@@ -296,6 +296,8 @@
                                         <a target="_blank" rel="noopener noreferrer" href="https://www.et28.net/">Más
                                             información</a>
                                     </p>
+
+                                    
                                 </div>
                             </div>
                         </div>
@@ -326,6 +328,7 @@
                                             href="https://www.ahkargentina.com.ar/formaciones/sistema-dual-aleman/tecnicatura-en-sistemas-it/">Más
                                             información</a>
                                     </p>
+
                                 </div>
                             </div>
                         </div>
